New: paginated JSON results
